--- a/frontend/src/components/TaskDialog/TaskDialog.scss
+++ b/frontend/src/components/TaskDialog/TaskDialog.scss
@@ -15,6 +15,11 @@ $padding: 1.5rem;
   flex-direction: column;
   position: relative;
 
+  .ant-form-item {
+    margin: 0;
+    padding: 0;
+  }
+
   .task-title {
     width: 95%;
     display: flex;
